# rag

./: Dockerfile  requirements.txt
rag_backend/: .env  dependencies.py  main.py  parsers.py  pyproject.toml  serilalizers.py
rag_backend/rag_backend_django/: manage.py
rag_backend/rag_backend_django/rag_backend_django/: asgi.py  settings.py  urls.py  wsgi.py
rag_backend/services/: auth_services.py  file_services.py  llm_service.py
